# volsurf

./: .env.example  .gitignore  README.md  pyproject.toml  vol-surface-data-lake-spec.md
notebooks/: 01_data_exploration.ipynb  02_surface_fitting.ipynb  03_vrp_analysis.ipynb  04_model_comparison.ipynb
scripts/: daily_update.sh
src/tests/: conftest.py  test_analytics.py  test_filters.py  test_fitting.py  test_ingestion.py  test_mock_data.py  test_models.py  test_utils.py
src/volsurf/: __init__.py  __main__.py
src/volsurf/analytics/: __init__.py  queries.py  realized_vol.py  surface_metrics.py  term_structure.py  variance_risk_premium.py  visualization.py
src/volsurf/cli/: main.py
src/volsurf/cli/commands/: __init__.py  analyze.py  fit.py  ingest.py  terminal.py  utils.py
src/volsurf/config/: settings.py
src/volsurf/database/: connection.py  schema.py
src/volsurf/fitting/: __init__.py  arbitrage.py  comparison.py  implied_vol.py  pipeline.py  polynomial.py  sabr.py  svi.py
src/volsurf/ingestion/: filters.py  mock_data.py  pipeline.py  terminal.py  theta_client.py
src/volsurf/models/: __init__.py  schemas.py
src/volsurf/utils/: __init__.py  export.py  validation.py
src/volsurf/web/: __init__.py  app.py
src/volsurf/web/pages/: __init__.py  diagnostics.py  surface_viewer.py  term_structure.py  vrp_analysis.py
