[project]
name = "volsurf"
version = "0.1.0"
description = "Options data lake with volatility surface fitting"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Core
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",

    # API & HTTP
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.9.0",

    # Visualization
    "plotly>=5.24.0",
    "matplotlib>=3.9.0",
    "streamlit>=1.40.0",

    # Notebooks
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
volsurf = "volsurf.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volsurf"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb", "plotly.*", "streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
